--- a/SZone/index.html
+++ b/SZone/index.html
@@ -1,9 +1,101 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Survivor Zone</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
-	<body>
-		<h1>Extreme Survivor Zone</h1>
-	</body>
+<head>
+	<title>Survivor Zone - Extreme and Hard</title>
+	
+	
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="vendors/css/fluid.css">
+	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    
+    
+
+</head>
+<body>
+	<header>
+		<nav>
+			<img src="resources/img/logo4.jpg" alt="LOGO" class="logo">
+			<ul class="main-nav">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">About US</a></li>
+			</ul>
+
+		</nav>
+	<div class="header-box">
+		  <div class="header-box-text">
+			  <h1>Survivor Zone</h1>
+			  <h2>The place for people who love Nature</h2>
+		  </div>
+		  <a href="#" class="btn btn-full"> Get your tools TODAY!</a>
+	</div>
+	</header>
+
+	<section class="about-section">
+		<div class="row">
+			
+			<div class="col span_1_of_2 about-box">
+				<h2 class="about-heading">Focused on improving your survival experience</h2>
+
+				<p class="about-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget neque at lorem finibus molestie quis eget eros. Nunc a imperdiet neque. Quisque sed mollis quam, at pharetra felis. Morbi nisi justo, efficitur quis convallis sit amet, viverra vitae nulla. Integer mi ante, tristique nec gravida eu, blandit eu nulla.</p> 
+				<p class="about-para">Ut faucibus scelerisque risus nec dapibus. Aliquam vel porttitor urna. Nulla elementum lectus ut augue sagittis cursus. Nam facilisis risus vitae ipsum tempor, vitae vehicula ex blandit. Curabitur at justo vel nisl pretium bibendum. Phasellus convallis elit sed euismod interdum.</p>
+
+				<a href="#" class="btn btn-ghost">Read More</a>
+			</div>
+
+	        <div class="col span_1_of_2 about-box">
+	             <img src="resources/img/laptop-image.jpg" alt="aboutimg" class="laptop-image">
+	        </div>
+
+		</div>
+		
+	</section>
+
+	<section class="product-section">
+		<div class="row">
+			<h2 class="product-heading">Our Products</h2>
+			<h3 class="product-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+		</div>
+		<ul class="product-portfolio clearfix">
+			<li>
+			   <figure class="portfolio-image">
+				  <img src="resources/img/knife.jpg" alt="KNIFE">
+				  <p class="portfolio-para">Knifes</p>
+			   </figure>
+		    </li>
+
+            <li>
+			   <figure class="portfolio-image">
+				  <img src="resources/img/axe.jpg" alt="AXES">
+				  <p class="portfolio-para">Axes</p>
+			   </figure>
+		    </li>
+
+            <li>
+			   <figure class="portfolio-image">
+				  <img src="resources/img/flashlight.jpg" alt="FLASHLIGHT">
+				  <p class="portfolio-para">Flashlight</p>
+			   </figure>
+			</li>
+			
+            <li>
+			   <figure class="portfolio-image">
+				  <img src="resources/img/rucksack.jpg" alt="RUCKSACKS">
+				  <p class="portfolio-para">Rucksacks</p>
+			   </figure>
+		    </li>
+
+		</ul>
+
+	</section>
+
+	<section class="services-section">
+		<div class="row">
+			<h2 class="services-heading">Our Services</h2>
+			<h3 class="services-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+			
+		</div>
+		
+	</section>
+</body>
 </html>
